# thermostat-pi

./: .env  .gitignore  Cargo.toml  configuration.yaml  deploy  docker-compose.yaml  env.sh  justfile  otlp-collector-config.yaml  readme.md
dashboard/: dashboard-chart.html  dashboard-table.html  index.html
dashboard/js/: shop-therm-chart-dashboard.js  shop-therm-table-dashboard.js  temp.js
push-temp/: .gitignore  .terraform.lock.hcl  Cargo.toml  Makefile  api_gateway.tf  dynamo.tf  justfile  lambdas.tf  main.tf  output.tf  variables.tf
push-temp-local/: .gitignore  Cargo.toml  Dockerfile  temp.sql
push-temp-local/migrations/: 20230112160803_create_table.down.sql  20230112160803_create_table.up.sql
push-temp-local/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
push-temp-local/src/routes/: health_check.rs  mod.rs  store_temperature.rs
push-temp-local/src/routes/home/: home.html
push-temp/.github/workflows/: push-temp-pipeline.yml
push-temp/src/: main.rs
scripts/: init_db.sh
src/: configuration.rs  control_thermostat.rs  lib.rs  main.rs  pi_relay.rs  read_temp.rs  send_temp.rs  shared_data.rs  telemetry.rs
src/routes/: get_thermostat_data.rs  health_check.rs  mod.rs  temperature.rs  thermostat.rs
temp-data/: Cargo.toml
temp-data/src/: lib.rs
tests/: health_check.rs
