[package]
name = "thermostat-pi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "thermostat-pi"

[features]
static_ssl = ['openssl/vendored']
vendored-openssl = ["openssl/vendored"]

[dependencies]
actix-web = "4.0.0-beta.21"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
rppal = "0.13.1"
simple-signal = "1.1.1"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = {version = "0.3.6", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-actix-web = "0.5.0-beta.7"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.78"
glob = "0.3.0"
log = "0.4.14"
reqwest = {version = "0.11.9", features = ["json"]}
thiserror = "1.0.30"
anyhow = "1.0.53"
openssl = {version = "0.10.38", features = ["vendored"], optional = true}
config = "0.11.0"
time = {version = "0.3.7", features = ["local-offset", "formatting"]}

[dev-dependencies]
wiremock = "0.5.10"
