[package]
name = "push-temp-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="push-temp-local"

[dependencies]
actix-web = "4"
actix-http = "3"
serde = {version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4", "serde"]}
chrono = "0.4"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-actix-web = "0.7"
serde_json = "1"
opentelemetry = { version = "0.18", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.11", features = ["http-proto", "reqwest-client"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"
thiserror = "1"
anyhow = "1"
tracing-opentelemetry = "0.18"
dotenv = "0.15"
secrecy = { version = "0.8.0", features = ["serde"] }

temp-data = { path="../temp-data" }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "bigdecimal"
]
